--- a/eme-observer/eoml copy 11.html
+++ b/eme-observer/eoml copy 11.html
@@ -594,7 +594,7 @@
                                                                             flex-wrap: wrap;
                                                                             gap: 6px;
                                                                             padding-bottom: 2px;
-                                                                            margin-bottom: 2px; /* Reduced from 4px for tighter spacing */
+                                                                            margin-bottom: 4px; /* reduced spacing */
                                                                         }
 
                                                                         .app-name-wrapper {
@@ -617,9 +617,6 @@
                                                                             font-size: 13px;
                                                                             border: 1px solid #ccc;
                                                                             border-radius: 5px;
-                                                                            height: 32px;
-                                                                            min-height: 32px;
-                                                                            box-sizing: border-box;
                                                                         }
 
                                                                         #date-container-inline .icon-only {
@@ -632,6 +629,7 @@
                                                                             align-items: center;
                                                                             justify-content: center;
                                                                             width: 28px;
+                                                                            height: 28px;
                                                                             cursor: pointer;
                                                                             transition: background 0.2s ease;
                                                                         }
@@ -647,7 +645,7 @@
                                                                             flex-wrap: wrap;
                                                                             gap: 6px;
                                                                             justify-content: flex-start;
-                                                                            margin-top: 2px; /* Reduced from 4px for tighter spacing */
+                                                                            margin-top: 6px;
                                                                         }
 
                                                                         /* --- ACTIVE STATION BUTTON HEIGHT FIX --- */
@@ -705,7 +703,7 @@
                                                                             flex-wrap: wrap;
                                                                             gap: 6px;
                                                                             justify-content: flex-start;
-                                                                            margin-top: 2px; /* smaller gap */
+                                                                            margin-top: 4px; /* smaller gap */
                                                                         }
                                                                     </style>
                                                                     
